Streamlined fetching a token

--- a/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
@@ -17,10 +17,6 @@ resource.url=http://localhost:8080/oauth
 resource.token.url=http://localhost:8080/oauth/token
 resource.authorize.url=http://localhost:8080/oauth/authorize
 
-menu.index=/index
-menu.client.list=/client/list
-menu.client.register=/client/register
-
 grid.service.url=http://grid.anc.org:9080/planner
 grid.service.redirect.url=http://grid.anc.org:9080/planner/authorized
 grid.service.token.url=http://grid.anc.org:9080/planner/tokenized
@@ -28,7 +24,12 @@ grid.service.token.url=http://grid.anc.org:9080/planner/tokenized
 ldc.resource.url=https://gridauth.ldc.upenn.edu:443
 ldc.resource.token.url=https://gridauth.ldc.upenn.edu:443
 ldc.resource.authorize.url=https://gridauth.ldc.upenn.edu:443
-#menu.index="/planner/index"
-#menu.client.list="/planner/client/list"
-#menu.client.register="/planner/client/register"
+
+#menu.index=/index
+#menu.client.list=/client/list
+#menu.client.register=/client/register
+
+menu.index="/planner/index"
+menu.client.list="/planner/client/list"
+menu.client.register="/planner/client/register"
 
