--- a/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
@@ -17,9 +17,9 @@ resource.url=http://localhost:8080/oauth
 resource.token.url=http://localhost:8080/oauth/token
 resource.authorize.url=http://localhost:8080/oauth/authorize
 
-grid.service.url=http://grid.anc.org:9080/planner
-grid.service.redirect.url=http://grid.anc.org:9080/planner/authorized
-grid.service.token.url=http://grid.anc.org:9080/planner/tokenized
+grid.service.url=https://grid.anc.org:9443/planner
+grid.service.redirect.url=https://grid.anc.org:9443/planner/authorized
+grid.service.token.url=https://grid.anc.org:9443/planner/tokenized
 
 ldc.resource.url=https://gridauth.ldc.upenn.edu:443
 ldc.resource.token.url=https://gridauth.ldc.upenn.edu:443
