Fixing URLs and menu paths.

--- a/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/application.properties
@@ -17,9 +17,9 @@ resource.url=http://localhost:8080/oauth
 resource.token.url=http://localhost:8080/oauth/token
 resource.authorize.url=http://localhost:8080/oauth/authorize
 
-grid.service.url=https://grid.anc.org:9443/planner
-grid.service.redirect.url=https://grid.anc.org:9443/planner/authorized
-grid.service.token.url=https://grid.anc.org:9443/planner/tokenized
+grid.service.url=https://grid.anc.org:9443/ldc-authorize
+grid.service.redirect.url=https://grid.anc.org:9443/ldc-authorize/authorized
+grid.service.token.url=https://grid.anc.org:9443/ldc-authorize/tokenized
 
 ldc.resource.url=https://gridauth.ldc.upenn.edu:443
 ldc.resource.token.url=https://gridauth.ldc.upenn.edu:443
@@ -29,7 +29,7 @@ ldc.resource.authorize.url=https://gridauth.ldc.upenn.edu:443
 #menu.client.list=/client/list
 #menu.client.register=/client/register
 
-menu.index="/planner/index"
-menu.client.list="/planner/client/list"
-menu.client.register="/planner/client/register"
+menu.index="/ldc-authorize/index"
+menu.client.list="/ldc-authorize/client/list"
+menu.client.register="/ldc-authorize/client/register"
 
