--- a/org.anc.lapps.oauth.grant-service/pom.xml
+++ b/org.anc.lapps.oauth.grant-service/pom.xml
@@ -16,7 +16,7 @@
         <version>1.2.2.RELEASE</version>
     </parent>
     <groupId>org.anc.lapps</groupId>
-    <artifactId>pipeline-planner</artifactId>
+    <artifactId>ldc-authorize</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <properties>
         <java.version>1.7</java.version>
@@ -25,7 +25,7 @@
     </properties>
     <packaging>${packaging.type}</packaging>
     <build>
-        <finalName>planner</finalName>
+        <finalName>ldc-authorize</finalName>
         <plugins>
             <!--
             <plugin>
